--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,18 +11,29 @@ categories = ["gui"]
 readme = "README.md"
 license = "MIT"
 rust-version = "1.61"
+build = "build.rs"
 
 [dependencies]
 egui = "0.19"
 egui_glow = { version = "0.19", default-features = false }
 arboard = { version = "2", default-features = false }
-fltk = { version = "1.3", features = ["enable-glwindow"] }
+fltk = { version = "1.3", features = ["raw-window-handle"] }
+glutin = { git = "https://github.com/rust-windowing/glutin.git", rev = "5c121bc43bb57c5af6523aa5b44bbdb42921a8b0" }
+raw-window-handle = "0.5"
+
+[build-dependencies]
+cfg_aliases = "0.1"
+
+[features]
+default = ["x11", "glx", "wgl"]
+no-pango = ["fltk/no-pango"]
+wayland = ["glutin/wayland", "fltk/use-wayland"]
+egl = ["glutin/egl"]
+glx = ["glutin/glx"]
+wgl = ["glutin/wgl"]
+x11 = ["glutin/x11"]
 
 # for the demo_windows example
 [dev-dependencies]
 egui_demo_lib = "0.19"
 three-d = "0.13"
-
-[features]
-wayland = ["fltk/use-wayland"]
-no-pango = ["fltk/no-pango"]
